Fix bug: overflow screen on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,45 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.calculator {
+    flex: auto;
+    padding: 20px;
+    margin: 20px;
+    border: 5px solid black;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 300px;
+    max-width: 800px;
+}
+
+#display {
+    flex: 1;
+    text-align: right;
+    background-color: rgb(1, 61, 43);
+    padding: 20px;
+    color: rgb(255, 255, 255);
+    font-size: 2rem;
+    font-weight: 800;
+    border-radius: 10px;
+    width: 100%;
+    max-height: 20%;
+}
+
+.buttons-panel {
+    flex: 1;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+    gap: 5px;
+    min-height: 80%;
 }
 
 button {
@@ -60,44 +99,4 @@ button:active {
 #active {
     background-color: rgba(255, 0, 0, 0.8);
     color: rgb(255, 255, 255);
-}
-
-.calculator {
-    padding: 20px;
-    margin: 0 10px;
-    border: 5px solid black;
-    background-color: rgb(255, 255, 255);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width: 400px;
-    width: 800px
-}
-
-#display {
-    flex: 1;
-    text-align: right;
-    background-color: rgb(1, 61, 43);
-    padding: 20px;
-    color: rgb(255, 255, 255);
-    font-size: 2rem;
-    font-weight: 800;
-    border-radius: 10px;
-    width: 100%;
-}
-
-#text {
- 
-}
-
-.buttons-panel {
-    flex: 1;
-    margin-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    min-width: 380px;
-    min-height: 400px;
-    justify-content: space-between;
-    gap: 5px;
 }
